Adição ngFor no Card Principal

--- a/src/app/card-principal/card-principal.component.html
+++ b/src/app/card-principal/card-principal.component.html
@@ -4,6 +4,10 @@
 
 <div>
     Esta é a melhor aplicação Angular
+
+    <ul *ngFor = "let cor of arrayCores">
+        <li>{{ cor }}</li>
+    </ul>
 </div>
 
 <p *ngIf="mostrarFonte">
