Adição de botão para exibir fonte

--- a/src/app/card-principal/card-principal.component.html
+++ b/src/app/card-principal/card-principal.component.html
@@ -10,6 +10,10 @@
     </ul>
 </div>
 
+<button *ngIf="!mostrarFonte" (click)="exibirFonte()">
+    Exibir fonte
+</button>
+
 <p *ngIf="mostrarFonte">
     Fonte: eu mesmo
 </p>
