Alterações na API

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,3 +1,5 @@
 <h1>Angular Simples</h1>
+<h2>{{ texto }}</h2>
+<button (click)="carregarTexto()">CARREGAR TEXTO</button>
 
 <app-card-principal></app-card-principal>
